--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fastfetch (2.2.3-0revyos1) unstable; urgency=medium
+
+  * Rebuild for revyos
+
+ -- Han Gao <gaohan@iscas.ac.cn>  Sun, 19 Nov 2023 16:03:27 +0800
+
 fastfetch (2.2.3-deepin) stable; urgency=medium
 
   * New upstream version
